[round-3] 도메인 모델링 및 서비스 구현 (#12)
* [volume-8] User와 Point 서비스를 도메인 서비스와 애플리케이션 서비스로 분리하여 재구성 및 테스트 (#11)

* refact: 포인트 도메인 메서드명 변경

* refact: 기존 user와 point 구조 및 테스트를 애플리케이션과 도메인의 역할을 나누어 수정. 포인트 내역 및 기타 도메인 로직 추가

* [volume-9] 카테고리와 브랜드 목록/상세 조회 및 연관 상품목록 조회 (#13)

* [volume-10] 상품 도메인 서비스 및 목록&상세조회 (#14)

* feat: 상품 옵션 도메인 모델링

* feat: QueryDSL 설정 추가 & 상품 목록 조회 / 상세 조회 및 테스트

* [volume-11] 좋아요 등록/취소 및 중복 등록및취소 처리 (#15)

* [volume-12] 주문 생성 및 테스트 (#16)

* [volume-13] 리팩토링 : 의미없는 Facade 삭제 (#17)

* [volume-12] 주문 생성 및 테스트 (#16)

* [volume-13] 리팩토링 : 의미없는 Facade 삭제 (#17)

* [volume-13] 리팩토링 : 의미없는 Facade 삭제 (#17)